namespaces/observability/kube-prometheus-stack/vs-grafana.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: raspbernetes.com
spec:
  hosts:
    - 'grafana.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: grafana.observability.svc.cluster.local
